# wav2mp3_with_lame

./: CMakeLists.txt  README.md  main.cpp  mp3writer.cpp  mp3writer.h  pcm_model.h  wavfile.cpp  wavfile.h  wavreader.cpp  wavreader.h
